Fix week days row problem

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -89,7 +89,7 @@
       color: #475059;
     }
 
-    .row {
+    .week-days-row {
       .cell {
         text-align: center;
         padding: 7px 8px;
