Fix go to year and visuality

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -7,6 +7,7 @@
 }
 
 .date-picker-container {
+  overflow: hidden;
   font-size: 13px;
   width: 265px;
   display: block;  border-radius: 5px;
@@ -14,6 +15,7 @@
   box-shadow: 0 3px 25px rgba(0, 0, 0, .5);
   font-family: Tahoma;
   position: absolute;
+  z-index: 99999999;
 
 
   /*** Common ***/
@@ -40,7 +42,7 @@
     -webkit-appearance: none;
   }
 
-  .header {
+  .date-picker-header {
     color: #5C6063;
     border-radius: 5px 5px 0 0;
     padding: 10px;
@@ -70,19 +72,28 @@
     }
 
     .input-year {
-      float: left;
-      width: 40px;
+      float: left !important;
+      width: 40px !important;
       text-align: left;
-      border: 1px solid #eeeeee;
       color: #555;
       font-size: 16px;
+      height: 20px !important;
+      border: 1px solid #eee !important;
       border-radius: 3px;
+      margin-right: 4px !important;
+      padding:0 !important;
+
+      :focus {
+        box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
+      }
     }
 
   }
 
-  .body {
-    padding: 10px;
+  .date-picker-body {
+    padding: 9px;
+    background-color: #ffffff;
+    width: 100%;
 
     .weekday {
       font-size: 12px;
@@ -114,7 +125,7 @@
       border: 1px solid #FCADAF !important;
     }
 
-    .disable {
+    .inActive {
       color: #D0CFCD !important;
     }
 
@@ -122,13 +133,13 @@
       color: #f00 !important;
     }
 
-    .disabled-holiday {
+    .inactive-holiday {
       color: #FCADAF !important;
     }
 
   }
 
-  .footer {
+  .date-picker-footer {
     text-align: center;
     background-color: #FFFFFF;
     border-radius: 0 0 5px 5px;
