Prevent form submit

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -84,6 +84,12 @@
       cursor: pointer;
     }
 
+    .frm-go-year {
+      display: inline-block;
+      padding: 0;
+      margin-bottom: -8px;
+    }
+
     .input-year {
       float: left !important;
       width: 40px !important;
